# django-site-metrics

./: .hgtags  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  contents.rst  description.rst  index.rst  install.rst  long_description.rst  settings.rst  templatetags.rst
metrics/: __init__.py  admin.py  apps.py  fields.py  managers.py  middleware.py  models.py  pipeline.py  plugins.py  router.py  serializers.py  settings.py  traffic.py  utils.py  version.py
metrics/locale/de/LC_MESSAGES/: django.mo  django.po
metrics/locale/en/LC_MESSAGES/: django.po
metrics/locale/es/LC_MESSAGES/: django.mo  django.po
metrics/locale/fr/LC_MESSAGES/: django.mo  django.po
metrics/management/: __init__.py
metrics/management/commands/: __init__.py  purgerequests.py
metrics/migrations/: 0001_initial.py  0002_alter_request_ip.py  0002_initial.py  0002_remove_request_is_ajax.py  0003_auto_20160331_1430.py  0003_restore_request_is_ajax.py  0003_update_defaults.py  0004_allow_blank_fields.py  0004_alter_time_timezone_default.py  0004_rename_time_to_timestamp.py  0005_rename_query_string_to_query_params.py  0005_rename_response_to_status_code.py  0006_allow_null_ip.py  0006_remove_default_ordering.py  0007_resync.py  0008_switch_to_big_auto_field.py
metrics/static/metrics/js/: jquery.flot.min.js  request.js
metrics/templates/admin/metrics/request/: change_list.html  overview.html
metrics/templates/metrics/plugins/: activeusers.html  latestrequests.html  topbrowsers.html  toppaths.html  topreferrers.html  topsearchphrases.html  trafficinformation.html
metrics/templatetags/: metrics_admin.py  metrics_plugins.py  metrics_tag.py
request/: admin.py  models.py
tests/: runtests.py  test_admin.py  test_command.py  test_managers.py  test_middlewares.py  test_models.py  test_plugins.py  test_router.py  test_settings.py  test_templatestags.py  test_traffic.py  test_urls.py  test_utils.py  tests.py
