[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
# E203 doesn't work for slicing
# W503 talks about operator formatting which is too opinionated.
ignore = E203, W503
max-complexity = 18
max-line-length = 120
select = B,C,E,F,W,T4,B9

[isort]
combine_as_imports = true
default_section = THIRDPARTY
force_grid_wrap=0
include_trailing_comma = true
indent = 4
known_third_party = django,environ,pyquery,pytz,requests,rest_framework
line_length = 120
multi_line_output = 3
not_skip = __init__.py
use_parentheses=True

[metadata]
license-file = LICENSE

[bdist_wheel]
universal = 0
