[metadata]
name = django-site-metrics
version = attr: metrics.__version__
url = https://github.com/rsalmaso/django-site-metrics.git
download_url = https://pypi.org/project/django-site-metrics/
author = Raffaele Salmaso
author_email = raffaele@salmaso.org
description = file: docs/description.rst
long_description = file: docs/long_description.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    Django>=2.2
    python-dateutil
packages =
    metrics
    metrics.migrations
    metrics.templatetags
    metrics.management
    metrics.management.commands

[options.package_data]
metrics =
    templates/admin/metrics/*.html
    templates/admin/metrics/metrics/*.html
    templates/metrics/plugins/*.html
    static/metrics/js/*.js
    locale/*/LC_MESSAGES/*.*

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__
# E203 doesn't work for slicing
# W503 talks about operator formatting which is too opinionated.
ignore = E203, W503
max-complexity = 18
max-line-length = 120
select = B,C,E,F,W,T4,B9

[isort]
combine_as_imports = true
default_section = THIRDPARTY
force_grid_wrap=0
include_trailing_comma = true
indent = 4
known_third_party = django,environ,pyquery,pytz,requests,rest_framework
line_length = 120
multi_line_output = 3
not_skip = __init__.py
use_parentheses=True

[bdist_wheel]
universal = 0
