[metadata]
name = django-site-metrics
version = attr: metrics.__version__
url = https://github.com/rsalmaso/django-site-metrics.git
download_url = https://pypi.org/project/django-site-metrics/
author = Raffaele Salmaso
author_email = raffaele@salmaso.org
description = file: docs/description.rst
long_description = file: docs/long_description.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    Django>=3.2
    python-dateutil
packages =
    metrics
    metrics.migrations
    metrics.templatetags
    metrics.management
    metrics.management.commands

[options.package_data]
metrics =
    templates/admin/metrics/*.html
    templates/admin/metrics/metrics/*.html
    templates/metrics/plugins/*.html
    static/metrics/js/*.js
    locale/*/LC_MESSAGES/*.*

[bdist_wheel]
universal = 0

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__,*/migrations/*.py
ignore =
    # Missing trailing comma (flake8-commas)
    C812,
    # Missing trailing comma in Python 3 (flake8-commas)
    C813,
    # Missing trailing comma in Python 2 (flake8-commas)
    C814,
    # Missing trailing comma in Python 3.5+ (flake8-commas)
    C815,
    # Missing trailing comma in Python 3.6+ (flake8-commas)
    C816,
    # Whitespace before ‘:’
    E203,
    # Do not use bare except, specify exception instead
    E722,
    # Line break occurred before a binary operator
    W503,
    # Line break occurred after a binary operator
    W504,
    # Do not use bare except (flake8-bugbear)
    B001
inline-quotes = "
max-complexity = 10
max-line-length = 120
select = B,C,E,F,W,T4,B9
show-source = true

[isort]
combine_as_imports = false
default_section = THIRDPARTY
force_sort_within_sections = true
indent = 4
known_first_party = metrics
known_third_party = django, pytz, requests, rest_framework
line_length = 120
order_by_type = False
profile = black
skip_glob = */migrations/*.py
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
